# MASS

./: .gitignore  LICENSE  README.en.md  README.md  __init__.py  makefile  pyproject.toml
stock_disagreement/: __init__.py  main.py  main_dtml.py
stock_disagreement/agent/: __init__.py  agent_distribution.py  basic_agent.py  investing_history.py  investment_analyzer.py  stock_selector.py
stock_disagreement/example_dataset/: ih_label.parq  industry_ret.parq  stock_basic_data.parq  sub_fudamental_data.parq
stock_disagreement/example_dataset/macro_data/: China_1-Year_Loan_Prime_Rate_LPR.csv  China_CPI_YoY_Current_Month.csv  Market_Sentiment_Index.csv  csi_300_pe_ttm.csv  yield_on_China_10_year_government_bonds.csv
stock_disagreement/exp/: __init__.py  trainer.py
stock_disagreement/model/: DTML.py  __init__.py
stock_disagreement/prompts/: __init__.py  prompt_template.py
stock_disagreement/prompts/stock_indicator/: 1.txt
stock_disagreement/utils/: __init__.py  clean_news.py  industry_index.py  llm.py
