[project]
name = "stock_prediction_benchmark"
version = "0.1.0"
url = "https://mirrors.aliyun.com/pypi/simple/"  
verify_ssl = true  
description = "a unified stock_prediction_benchmark"
authors = [
    {name = "anonymous", email = "anonymous"},
]
dependencies = [
    "ipykernel>=6.29.4",
    "pyarrow>=16.1.0",
    "fastparquet>=2024.5.0",
    "fire>=0.6.0",
    "lightgbm>=4.3.0",
    "pyecharts>=2.0.6",
    "openai==1.55.1",
    "transformers==4.41.0",
    "modelscope==1.14.0",
    "backoff>=2.2.1",
    "retry>=0.9.2",
    "retrying>=1.3.4",
    "jieba>=0.42.1",
    "bs4>=0.0.2",
    "baostock>=0.8.9",
    "faiss-gpu>=1.7.2",
    "sentence-transformers>=3.3.1",
    "torchvision==0.17.2",
    "torch==2.2.2",
    "qwen-agent==0.0.9",
    "pyparsing>=3.2.1",
    "cycler>=0.12.1",
    "kiwisolver>=1.4.8",
    "matplotlib>=3.10.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "isort>=5.13.2",
    "black>=24.4.2",
]
